--- a/backend/src/main/resources/application-test.properties
+++ b/backend/src/main/resources/application-test.properties
@@ -8,3 +8,9 @@ spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+security.oauth2.client.client-id=alura-flix
+security.oauth2.client.client-secret=alura-flix123
+
+jwt.secret=MY-JWT-SECRET
+jwt.duration=86400
+
